# serde_postgres

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: de.rs  error.rs  lib.rs
